src/libpomdp/parser/java/DotPomdpParser.java
// $ANTLR 3.0.1 /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g 2010-10-14 14:45:56

    package libpomdp.parser.java;
    import libpomdp.common.java.Utils;
    import libpomdp.common.java.CustomVector;
    import libpomdp.common.java.CustomMatrix;  
  


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

/** ------------------------------------------------------------------------- *
 * libpomdp
 * ========
 * File: DotPomdp.g
 * Description: ANTLRv3 grammar specification to parse a .POMDP file in
 *              Cassandra's format. Not all features are supported yet.
 *              Sparse matrices and arrays use the MTJ matrix package.
 * Copyright (c) 2009, 2010 Diego Maniloff 
 * W3: http://www.cs.uic.edu/~dmanilof
 --------------------------------------------------------------------------- */
public class DotPomdpParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DISCOUNTTOK", "VALUESTOK", "STATESTOK", "ACTIONSTOK", "OBSERVATIONSTOK", "TTOK", "OTOK", "RTOK", "UNIFORMTOK", "IDENTITYTOK", "REWARDTOK", "COSTTOK", "STARTTOK", "INCLUDETOK", "EXCLUDETOK", "RESETTOK", "COLONTOK", "ASTERICKTOK", "PLUSTOK", "MINUSTOK", "STRING", "INT", "EXPONENT", "FLOAT", "COMMENT", "WS"
    };
    public static final int IDENTITYTOK=13;
    public static final int EXPONENT=26;
    public static final int ACTIONSTOK=7;
    public static final int OTOK=10;
    public static final int COSTTOK=15;
    public static final int STARTTOK=16;
    public static final int DISCOUNTTOK=4;
    public static final int MINUSTOK=23;
    public static final int FLOAT=27;
    public static final int INT=25;
    public static final int VALUESTOK=5;
    public static final int INCLUDETOK=17;
    public static final int EOF=-1;
    public static final int OBSERVATIONSTOK=8;
    public static final int ASTERICKTOK=21;
    public static final int WS=29;
    public static final int EXCLUDETOK=18;
    public static final int TTOK=9;
    public static final int COLONTOK=20;
    public static final int PLUSTOK=22;
    public static final int UNIFORMTOK=12;
    public static final int REWARDTOK=14;
    public static final int COMMENT=28;
    public static final int RTOK=11;
    public static final int STATESTOK=6;
    public static final int STRING=24;
    public static final int RESETTOK=19;

        public DotPomdpParser(TokenStream input) {
            super(input);
        }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g"; }


        // main method
        public static void main(String[] args) throws Exception {
            DotPomdpLexer lex = new DotPomdpLexer(new ANTLRFileStream(args[0]));
           	CommonTokenStream tokens = new CommonTokenStream(lex);
            DotPomdpParser parser = new DotPomdpParser(tokens);

            try {
                parser.dotPomdp();
            } catch (RecognitionException e)  {
                e.printStackTrace();
            }
        }

    	
    	private int matrixContext;
    	
    	private static final int MC_TRANSITION = 0;
    	private static final int MC_TRANSITION_ROW = 1;
    	private static final int MC_OBSERVATION = 2;
    	private static final int MC_OBSERVATION_ROW = 3;
        // main structure
        private PomdpSpecStd dotPomdpSpec = new PomdpSpecStd();

        // threshold for sums of distros
        final double THRESHOLD = 1e-5;

        // return main structure
        public PomdpSpecStd getSpec() {
            return dotPomdpSpec;
        }

        // simple debug mesg
        private void err(String msg) {
            System.err.println(msg);
        }



    // $ANTLR start dotPomdp
    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:135:1: dotPomdp : preamble start_state param_list ;
    public final void dotPomdp() throws RecognitionException {
        try {
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:136:5: ( preamble start_state param_list )
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:137:9: preamble start_state param_list
            {

                  		System.out.println("PARSER: Parsing preamble...");
                    
            pushFollow(FOLLOW_preamble_in_dotPomdp796);
            preamble();
            _fsp--;


                    	dotPomdpSpec.compReward=true;
                    	System.out.println("PARSER: Summary -> states "+dotPomdpSpec.nrSta);
                    	System.out.println("                -> observations "+dotPomdpSpec.nrObs);
                    	System.out.println("                -> actions "+dotPomdpSpec.nrAct);
                        // we can now initialize the data structures for T, O, R
                        /* initialize |A| s x s' dense matrices (they're actually sparse)
                           T: <action> : <start-state> : <end-state> prob  */
                        dotPomdpSpec.T = new CustomMatrix[dotPomdpSpec.nrAct];
                        for(int a=0; a<dotPomdpSpec.nrAct; a++) 
                            dotPomdpSpec.T[a] = new CustomMatrix(dotPomdpSpec.nrSta,
                                                                dotPomdpSpec.nrSta);
                        /* initialize |A| s' x o dense matrices (they're actually sparse)
                           O : <action> : <end-state> : <observation> prob */        
                        dotPomdpSpec.O = new CustomMatrix[dotPomdpSpec.nrAct];
                        for(int a=0; a<dotPomdpSpec.nrAct; a++) 
                            dotPomdpSpec.O[a] = new CustomMatrix(dotPomdpSpec.nrSta,
                                                                dotPomdpSpec.nrObs);
                        /* initialize |A| 1 x s' sparse vectors (comp reward)
                           R: <action> : <start-state> : * : * float */
                           dotPomdpSpec.R = new CustomVector[dotPomdpSpec.nrAct];
                           for(int a=0; a<dotPomdpSpec.nrAct; a++)
                           dotPomdpSpec.R[a] = new CustomVector(dotPomdpSpec.nrSta); 
                           System.out.println("PARSER: Parsing starting state/belief...");   
                    
            pushFollow(FOLLOW_start_state_in_dotPomdp814);
            start_state();
            _fsp--;


                        // make sure the start state is a distribution
                        
                        //System.out.println("Successfully parsed start state");
                        if (dotPomdpSpec.startState.norm(1.0) - 1.0 > THRESHOLD)
                            err("Start state not a distribution" + dotPomdpSpec.startState.norm(1));
                        System.out.println("PARSER: Parsing parameters...");
                    
            pushFollow(FOLLOW_param_list_in_dotPomdp833);
            param_list();
            _fsp--;


                        // there should be a check for the parameter distros here...
                        // System.out.println("Successfully parsed parameters");
                        if (dotPomdpSpec.compReward==false){
                        	System.out.println("PARSER: Compressing rewards...");
                        	//Create the R(a,s) type of reward (not very efficient, but only one time)
            				for (int a=0;a<dotPomdpSpec.nrAct;a++){
            					//R[a]=new CustomVector(dotPomdpSpec.nrSta);
            					for (int s=0;s<dotPomdpSpec.nrSta;s++){
            						CustomMatrix prod=new CustomMatrix(dotPomdpSpec.nrSta,dotPomdpSpec.nrSta);
            						//System.out.println("O("+dotPomdpSpec.O[a].numRows()+","+dotPomdpSpec.O[a].numColumns()+") R("+dotPomdpSpec.fullR[a][s].numRows()+","+dotPomdpSpec.fullR[a][s].numColumns()+")");
            						prod=dotPomdpSpec.O[a].transBmult(dotPomdpSpec.fullR[a][s]);
            						double value=0;
            						for (int sp=0;sp<dotPomdpSpec.nrSta;sp++){
            							value+=prod.get(sp,sp)*dotPomdpSpec.T[a].get(s, sp);
            						}
            						dotPomdpSpec.R[a].set(s,value);
            					}
            				}
                        }
                        System.out.println("PARSER: [DONE]");
                        
                    

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end dotPomdp


    // $ANTLR start preamble
    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:201:1: preamble : ( param_type )* ;
    public final void preamble() throws RecognitionException {
        try {
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:202:5: ( ( param_type )* )
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:202:7: ( param_type )*
            {
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:202:7: ( param_type )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=DISCOUNTTOK && LA1_0<=OBSERVATIONSTOK)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:202:7: param_type
            	    {
            	    pushFollow(FOLLOW_param_type_in_preamble869);
            	    param_type();
            	    _fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end preamble


    // $ANTLR start param_type
    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:205:1: param_type : ( discount_param | value_param | state_param | action_param | obs_param );
    public final void param_type() throws RecognitionException {
        try {
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:206:5: ( discount_param | value_param | state_param | action_param | obs_param )
            int alt2=5;
            switch ( input.LA(1) ) {
            case DISCOUNTTOK:
                {
                alt2=1;
                }
                break;
            case VALUESTOK:
                {
                alt2=2;
                }
                break;
            case STATESTOK:
                {
                alt2=3;
                }
                break;
            case ACTIONSTOK:
                {
                alt2=4;
                }
                break;
            case OBSERVATIONSTOK:
                {
                alt2=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("205:1: param_type : ( discount_param | value_param | state_param | action_param | obs_param );", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:206:7: discount_param
                    {
                    pushFollow(FOLLOW_discount_param_in_param_type901);
                    discount_param();
                    _fsp--;


                    }
                    break;
                case 2 :
                    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:207:7: value_param
                    {
                    pushFollow(FOLLOW_value_param_in_param_type909);
                    value_param();
                    _fsp--;


                    }
                    break;
                case 3 :
                    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:208:7: state_param
                    {
                    pushFollow(FOLLOW_state_param_in_param_type917);
                    state_param();
                    _fsp--;


                    }
                    break;
                case 4 :
                    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:209:7: action_param
                    {
                    pushFollow(FOLLOW_action_param_in_param_type925);
                    action_param();
                    _fsp--;


                    }
                    break;
                case 5 :
                    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:210:7: obs_param
                    {
                    pushFollow(FOLLOW_obs_param_in_param_type933);
                    obs_param();
                    _fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end param_type


    // $ANTLR start discount_param
    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:214:1: discount_param : DISCOUNTTOK COLONTOK FLOAT ;
    public final void discount_param() throws RecognitionException {
        Token FLOAT1=null;

        try {
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:215:5: ( DISCOUNTTOK COLONTOK FLOAT )
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:215:7: DISCOUNTTOK COLONTOK FLOAT
            {
            match(input,DISCOUNTTOK,FOLLOW_DISCOUNTTOK_in_discount_param953); 
            match(input,COLONTOK,FOLLOW_COLONTOK_in_discount_param955); 
            FLOAT1=(Token)input.LT(1);
            match(input,FLOAT,FOLLOW_FLOAT_in_discount_param957); 
            // set discount factor in global problem struct
                   dotPomdpSpec.discount = Double.parseDouble(FLOAT1.getText());

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end discount_param


    // $ANTLR start value_param
    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:220:1: value_param : VALUESTOK COLONTOK value_tail ;
    public final void value_param() throws RecognitionException {
        try {
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:221:5: ( VALUESTOK COLONTOK value_tail )
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:221:7: VALUESTOK COLONTOK value_tail
            {
            match(input,VALUESTOK,FOLLOW_VALUESTOK_in_value_param987); 
            match(input,COLONTOK,FOLLOW_COLONTOK_in_value_param989); 
            pushFollow(FOLLOW_value_tail_in_value_param991);
            value_tail();
            _fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end value_param


    // $ANTLR start value_tail
    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:224:1: value_tail : ( REWARDTOK | COSTTOK );
    public final void value_tail() throws RecognitionException {
        try {
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:225:5: ( REWARDTOK | COSTTOK )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==REWARDTOK) ) {
                alt3=1;
            }
            else if ( (LA3_0==COSTTOK) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("224:1: value_tail : ( REWARDTOK | COSTTOK );", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:225:7: REWARDTOK
                    {
                    match(input,REWARDTOK,FOLLOW_REWARDTOK_in_value_tail1014); 

                    }
                    break;
                case 2 :
                    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:226:7: COSTTOK
                    {
                    match(input,COSTTOK,FOLLOW_COSTTOK_in_value_tail1022); 
                    err("PARSER: Costs are not supported... sure that you want to use costs?");

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end value_tail


    // $ANTLR start state_param
    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:230:1: state_param : STATESTOK COLONTOK state_tail ;
    public final void state_param() throws RecognitionException {
        try {
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:231:5: ( STATESTOK COLONTOK state_tail )
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:231:7: STATESTOK COLONTOK state_tail
            {
            match(input,STATESTOK,FOLLOW_STATESTOK_in_state_param1055); 
            match(input,COLONTOK,FOLLOW_COLONTOK_in_state_param1057); 
            pushFollow(FOLLOW_state_tail_in_state_param1059);
            state_tail();
            _fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end state_param


    // $ANTLR start state_tail
    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:234:1: state_tail : ( INT | ident_list );
    public final void state_tail() throws RecognitionException {
        Token INT2=null;
        ArrayList<String> ident_list3 = null;


        try {
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:235:5: ( INT | ident_list )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==INT) ) {
                alt4=1;
            }
            else if ( (LA4_0==STRING) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("234:1: state_tail : ( INT | ident_list );", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:235:7: INT
                    {
                    INT2=(Token)input.LT(1);
                    match(input,INT,FOLLOW_INT_in_state_tail1082); 
                    dotPomdpSpec.nrSta   = Integer.parseInt(INT2.getText());

                    }
                    break;
                case 2 :
                    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:238:7: ident_list
                    {
                    pushFollow(FOLLOW_ident_list_in_state_tail1109);
                    ident_list3=ident_list();
                    _fsp--;

                    dotPomdpSpec.staList = ident_list3;
                             dotPomdpSpec.nrSta   = dotPomdpSpec.staList.size();

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end state_tail


    // $ANTLR start action_param
    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:244:1: action_param : ACTIONSTOK COLONTOK action_tail ;
    public final void action_param() throws RecognitionException {
        try {
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:245:5: ( ACTIONSTOK COLONTOK action_tail )
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:245:7: ACTIONSTOK COLONTOK action_tail
            {
            match(input,ACTIONSTOK,FOLLOW_ACTIONSTOK_in_action_param1150); 
            match(input,COLONTOK,FOLLOW_COLONTOK_in_action_param1152); 
            pushFollow(FOLLOW_action_tail_in_action_param1154);
            action_tail();
            _fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end action_param


    // $ANTLR start action_tail
    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:248:1: action_tail : ( INT | ident_list );
    public final void action_tail() throws RecognitionException {
        Token INT4=null;
        ArrayList<String> ident_list5 = null;


        try {
            // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:249:5: ( INT | ident_list )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==INT) ) {
                alt5=1;
            }
            else if ( (LA5_0==STRING) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("248:1: action_tail : ( INT | ident_list );", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:249:7: INT
                    {
                    INT4=(Token)input.LT(1);
                    match(input,INT,FOLLOW_INT_in_action_tail1177); 
                    dotPomdpSpec.nrAct   = Integer.parseInt(INT4.getText());

                    }
                    break;
                case 2 :
                    // /home/maraya/inria/code/libpomdp/src/libpomdp/parser/java/DotPomdp.g:252:7: ident_list
                    {
                    pushFollow(FOLLOW_ident_list_in_action_tail1204);
                    ident_list5=ident_list();
                    _fsp--;

                    dotPomdpSpec.actList = ident_list5;
                             dotPomdpSpec.nrAct   = dotPomdpSpec.actList.size();

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end action_tail

